--- a/CocosBuilder/ccBuilder/CocosBuilder-Info.plist
+++ b/CocosBuilder/ccBuilder/CocosBuilder-Info.plist
@@ -58,7 +58,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>3.0</string>
+	<string>20130330</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
